// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component GoogleScholar  component remders with a loaded author, with a Field, a RaisedButton and a FlatButton with correct labels 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ol
              style={
                Object {
                  "paddingLeft": 0,
                }
              }
            >
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ol>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Add your Google Scholar identifier"
    >
      <div>
        <p>
          Creating your Google Scholar Citation profile will make sure that Google Scholar will easily and accurately group all the citations of your publications into one pool.   A profile generally lists your name, chosen keywords of research interest, generated citation metrics, and citations (including links to citing articles).
        </p>
        <p>
          In order to create a Google Scholar Citation profile, you need a Google Account.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column is-narrow"
        >
          <RaisedButton
            className="is-mui-spacing-button"
            disabled={false}
            fullWidth={false}
            label="Add"
            labelPosition="after"
            onTouchTap={[Function]}
            primary={false}
            secondary={true}
          />
          <FlatButton
            className="is-mui-spacing-button"
            disabled={false}
            fullWidth={false}
            label="Cancel"
            labelPosition="after"
            labelStyle={Object {}}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            primary={false}
            secondary={false}
          />
        </div>
      </div>
    </StandardCard>
  </form>
</StandardPage>
`;

exports[`Component GoogleScholar  should render an empty div if there is no author data after loading 1`] = `<div />`;

exports[`Component GoogleScholar  should render inline loader when author is still loading 1`] = `
<div
  className="is-centered"
>
  <InlineLoader
    message="Loading your details"
  />
</div>
`;

exports[`Component GoogleScholar  should render the form, with an input, a update and a cancel button 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ol
              style={
                Object {
                  "paddingLeft": 0,
                }
              }
            >
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ol>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Update your Google Scholar identifier"
    >
      <div>
        <p>
          Update your Google Scholar ID below.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column is-narrow"
        >
          <RaisedButton
            className="is-mui-spacing-button"
            disabled={false}
            fullWidth={false}
            label="Update"
            labelPosition="after"
            onTouchTap={[Function]}
            primary={false}
            secondary={true}
          />
          <FlatButton
            className="is-mui-spacing-button"
            disabled={false}
            fullWidth={false}
            label="Cancel"
            labelPosition="after"
            labelStyle={Object {}}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            primary={false}
            secondary={false}
          />
        </div>
      </div>
    </StandardCard>
  </form>
</StandardPage>
`;
